# rex

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  README.org  djw.config  ebpf_tests.config  env.sh  epf_tests.config  firecracker-bin  firecracker-run-new.sh  firecracker-run.sh  firecracker-setup.sh  flake.nix  get_bpftool.sh  get_linux.sh  ideas.md  meson.build  microvm-olddef.config  minutes.org  qemu-run.sh  rex-native.ini  shell.nix
inner_unikernel_rt/: Cargo.toml  build.py  build.rs  rustfmt.toml
inner_unikernel_rt/.cargo/: config.toml
inner_unikernel_rt/libiustub/: Makefile  lib.c
inner_unikernel_rt/src/: barrier.rs  base_helper.rs  debug.rs  ktime.rs  lib.rs  map.rs  panic.rs  per_cpu.rs  prog_type.rs  random32.rs  read_once.rs  seqlock.rs  spinlock.rs  stub.rs  sysctl.rs  task_struct.rs  timekeeping.rs  utils.rs  xdp.rs
inner_unikernel_rt/src/kprobe/: binding.rs  kprobe_impl.rs  mod.rs
inner_unikernel_rt/src/linux/: bpf.rs  mod.rs  perf_event.rs  ptrace.rs  seccomp.rs  unistd.rs
inner_unikernel_rt/src/perf_event/: binding.rs  mod.rs  perf_event_impl.rs
inner_unikernel_rt/src/sched_cls/: sched_cls_impl.rs
inner_unikernel_rt/src/tracepoint/: mod.rs  tp_impl.rs
inner_unikernel_rt/src/xdp/: xdp_impl.rs
librex/: .gitignore  Makefile  README.md  bindings.h  librex.cpp  librex.h  meson.build
librex/lib/: bindings.h  librex.cpp
rex/: Cargo.toml  build.py  build.rs  meson.build
rex-macros/: Cargo.toml
rex-macros/src/: args.rs  kprobe.rs  lib.rs  perf_event.rs  tc.rs  tracepoint.rs  type_check.rs  xdp.rs
rex/.cargo/: config.toml
rex/libiustub/: lib.c
rex/librexstub/: lib.c
rex/src/: base_helper.rs  debug.rs  ffi.rs  lib.rs  log.rs  map.rs  panic.rs  per_cpu.rs  prog_type.rs  pt_regs.rs  random32.rs  read_once.rs  spinlock.rs  stub.rs  task_struct.rs  utils.rs
rex/src/bindings/: mod.rs
rex/src/kprobe/: kprobe_impl.rs
rex/src/perf_event/: mod.rs  perf_event_impl.rs
rex/src/sched_cls/: sched_cls_impl.rs
rex/src/tracepoint/: binding.rs  mod.rs  tp_impl.rs
rex/src/xdp/: xdp_impl.rs
samples/: .gitignore  meson.build
samples/atomic/: Cargo.toml  Makefile  event-trigger.c  loader.c  meson.build
samples/atomic/src/: main.rs
samples/bmc/: Cargo.toml  Makefile  bmc_user.c  entry.c  meson.build  prep_interface.py
samples/bmc/src/: bmc_common.rs  helpers.rs  linux_tcp.rs  linux_udp.rs  main.rs  stub.rs
samples/cpustat/: Cargo.toml
samples/cpustat/src/: stub.rs
samples/electrode/: Cargo.toml  Makefile  config.txt  entry.c  fast_common.h  meson.build
samples/electrode/.cargo/: config.toml
samples/electrode/src/: common.rs  main.rs  maps.rs
samples/error_injection/: .gitignore  Cargo.toml  Makefile  loader.c  userapp  userapp.c
samples/error_injection/.cargo/: config.toml
samples/error_injection/src/: main.rs
samples/error_injector/: Cargo.toml  Makefile  loader.c  meson.build
samples/error_injector/.cargo/: config.toml
samples/error_injector/src/: main.rs
samples/error_injector/tests/: runtest.py
samples/exploit/: Cargo.toml  Makefile  README.md
samples/hello/: Cargo.toml  Makefile  clippy.toml  config.py  helloc.c  loader.c  meson.build
samples/hello/src/: helper.rs  interface.rs  main.rs
samples/hello/tests/: runtest.py
samples/ktime/: Cargo.toml  Makefile  event-trigger.c  loader.c
samples/ktime/src/: main.rs
samples/map_bench/: Cargo.toml  Makefile  bench.sh  loader.c  meson.build
samples/map_bench/src/: main.rs
samples/map_test/: Cargo.toml  Makefile  config.py  event-trigger  loader.c  loader.cpp  meson.build  prep_interface.py  rust.out
samples/map_test/.cargo/: config.toml
samples/map_test/src/: helper.rs  main.rs  rt.rs  stub.rs
samples/map_test/tests/: runtest.py
samples/map_test_2/: Cargo.toml  Makefile  bruh  loader.c  meson.build
samples/map_test_2/src/: main.rs
samples/map_test_2/tests/: runtest.py
samples/memcached_benchmark/: .gitignore  Cargo.toml  bench.py  plot.py  test.sh
samples/memcached_benchmark/.cargo/: config.toml
samples/memcached_benchmark/src/: main.rs
samples/onboarding_task/: Cargo.toml  Makefile  README.md  entry.c  meson.build
samples/onboarding_task/src/: main.rs
samples/recursive/: Cargo.toml  Makefile  bench.sh  loader.c  meson.build
samples/recursive/src/: main.rs
samples/spinlock_cleanup_benchmark/: Cargo.toml  Makefile  loader.c  meson.build
samples/spinlock_cleanup_benchmark/src/: main.rs
samples/spinlock_test/: Cargo.toml  Makefile  loader.c  meson.build
samples/spinlock_test/src/: main.rs
samples/startup_overhead_benchmark/: Cargo.toml  Makefile  event-trigger.c  loader.c  meson.build
samples/startup_overhead_benchmark/src/: main.rs
samples/syscall_tp/: Cargo.toml  Makefile  meson.build  syscall_tp_user.c
samples/syscall_tp/src/: main.rs
samples/syscall_tp/tests/: runtest.py
samples/syscount/: Cargo.toml  loader.c  meson.build  rustfmt.toml
samples/syscount/.cargo/: config.toml
samples/syscount/src/: main.rs
samples/termination_test/: Cargo.toml  Makefile  loader.c
samples/termination_test/.cargo/: config.toml
samples/termination_test/src/: main.rs
samples/trace_event/: .gitignore  Cargo.toml  Makefile  bpf.c  bpf.h  loader.c  meson.build  trace_event.c  trace_event_user.c  trace_helpers.c
samples/trace_event/.cargo/: config.toml
samples/trace_event/src/: helper.rs  main.rs  map.rs  perf_event_kern.rs  rt.rs
samples/tracex5/: Cargo.toml  Makefile  config.py  meson.build  prep_interface.py  tracex5.c
samples/tracex5/.cargo/: config.toml
samples/tracex5/src/: helpers.rs  main.rs  stub.rs
samples/xdp_test/: Cargo.toml  Makefile  README.md  clippy.toml  entry.c  meson.build
samples/xdp_test/.cargo/: config.toml
samples/xdp_test/src/: main.rs
samples/xdp_test/tests/: runtest.py
tools/memcached_benchmark/: .gitignore  Cargo.toml  LICENSE  bench.py  devenv.nix  devenv.yaml  flake.nix
tools/memcached_benchmark/.cargo/: config.toml
tools/memcached_benchmark/src/: cli.rs  dict.rs  fs.rs  get_values.rs  main.rs  set_values.rs
user-framework/rust_test/: Cargo.toml
(+117 files in other folders)
