[package]
name = "inner_unikernel_rt"
version = "0.1.0"
edition = "2021"
build = "build.rs"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
doctest = false

[dependencies]
# rlibc = "1.0.0"

[profile.dev]
debug = 0
panic = "abort"

[profile.release]
debug = 0
panic = "abort"

[inner_unikernel]
ksyms = [
  'bpf_get_current_comm',
  'bpf_get_current_pid_tgid',
  'bpf_get_stackid_pe',
  'bpf_map_lookup_elem',
  'bpf_map_update_elem',
  'bpf_map_delete_elem',
  'bpf_map_push_elem',
  'tk_fast_mono',
  'tk_core',
  '_printk',
  'vprintk',
  'read_seqcount_latch_retry_helper',
  'ktime_get_mono_fast_ns',
  'ktime_get_boot_fast_ns',
  'bpf_perf_prog_read_value',
  'bpf_probe_read_kernel',
  'bpf_trace_printk_iu',
  'just_return_func',
  'jiffies',
  'current_task',
  'cpu_number',
  'numa_node',
  'panic',
  '__per_cpu_offset',
  'iu_cleanup_entries',
]

uheaders = [
  "linux/bpf.h",
  "linux/errno.h",
  "linux/perf_event.h",
  "linux/ptrace.h",
  "linux/seccomp.h",
  "linux/unistd.h",
]

kheaders = [
  "linux/sched.h",
  "linux/gfp_types.h",
  "linux/timekeeper_internal.h",
  "linux/seqlock.h",
]
