[package]
name = "inner_unikernel_rt"
version = "0.1.0"
edition = "2021"
build = "build.rs"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
doctest = false

[dependencies]
paste = "1.0.14"
rlibc = "1.0.0"
struct_filter = { path = "../struct_filter" }

[profile.dev]
debug = 0
panic = "abort"

[profile.release]
debug = 0
panic = "abort"

[inner_unikernel]
ksyms = [
  'bpf_get_stackid_pe',
  'bpf_map_lookup_elem',
  'bpf_map_update_elem',
  'bpf_map_delete_elem',
  'bpf_map_push_elem',
  'bpf_map_pop_elem',
  'bpf_map_peek_elem',
  'bpf_for_each_map_elem',
  'tk_fast_mono',
  #  'tk_core',
  'vprintk',
  'ktime_get_mono_fast_ns',
  'ktime_get_boot_fast_ns',
  'bpf_perf_prog_read_value',
  'bpf_probe_read_kernel',
  'bpf_trace_printk_iu',
  'just_return_func',
  'jiffies',
  'current_task',
  'cpu_number',
  'numa_node',
  'panic',
  '__per_cpu_offset',
  'iu_cleanup_entries',
  'get_random_u32',
  'ktime_get_coarse_ts64',
  'bpf_spin_lock',
  'bpf_spin_unlock',
  'bpf_sysctl_get_name',
  #  'copy_sysctl_value',
  'bpf_sysctl_set_new_value',
  'bpf_snprintf',
  'bpf_xdp_adjust_head',
  'bpf_xdp_adjust_tail',
  'memcpy',
  'iu_landingpad',
  'iu_stack_ptr',
]

uheaders = [
  "linux/bpf.h",
  "linux/errno.h",
  "linux/perf_event.h",
  "linux/ptrace.h",
  "linux/seccomp.h",
  "linux/unistd.h",
  "linux/in.h",
  "linux/pkt_cls.h",
]

kheaders = [
  "linux/sched.h",
  "linux/gfp_types.h",
  "linux/timekeeper_internal.h",
  "linux/seqlock.h",
  "linux/prandom.h",
  "linux/kcsan.h",
  "linux/filter.h",
  "linux/if_ether.h",
  "linux/ip.h",
  "linux/tcp.h",
  "linux/udp.h",
  "linux/skbuff.h",
  "net/xdp.h",
]

kconfigs = ["CONFIG_CC_IS_CLANG"]
