subdir('atomic')
subdir('bmc')
subdir('error_injector')
subdir('hello')
subdir('map_bench')
subdir('map_test')
subdir('map_test_2')
subdir('recursive')
subdir('spinlock_cleanup_benchmark')
subdir('spinlock_test')
subdir('startup_overhead_benchmark')
subdir('syscall_tp')
subdir('trace_event')
subdir('tracex5')
subdir('xdp_test')
