[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[inner_unikernel]
helpers = [
    "bpf_trace_printk",
    "bpf_get_current_pid_tgid"
]

# Also define this if any kernel uapi headers are required
# headers = []
