[package]
name = "memcached_benchmark"
version = "0.1.0"
edition = "2021"
authors = ["Ruowen Qin ruowenq2@illinois.edu"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memcache = "0.17.1"
rand = "0.8.5"
zipf = "7.0.1"
clap = { version = "4.4.11", features = ["derive"] }
rayon = "1.8.0"
tokio = { version = "1.35.1", features = ["full"] }
async-memcached = "0.1.7"

[profile.release]
lto = "thin"
opt-level = 3
debug = false
