[package]
name = "memcached_benchmark"
version = "0.1.0"
edition = "2021"
authors = ["Ruowen Qin ruowenq2@illinois.edu"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memcache = "0.17.1"
rand = "0.8.5"
zipf = "7.0.1"
clap = { version = "4.4.13", features = ["derive"] }
rayon = "1.8.0"
tokio = { version = "1.35.1", features = ["full"] }
# async-memcached = "0.1.7"
futures = "0.3.30"
r2d2-memcache = "0.6.0"
zstd = "0.13.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.30"


[profile.release]
lto = "thin"
opt-level = 3
debug = false
