[package]
name = "memcached_benchmark"
version = "0.1.0"
edition = "2021"
authors = ["Ruowen Qin ruowenq2@illinois.edu"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memcache = "0.17"
rand = "0.8"
zipf = "7.0"
clap = { version = "4", features = ["derive"] }
rayon = "1"
tokio = { version = "1", features = ["full"] }
zstd = "0"
r2d2-memcache = "0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"


[profile.release]
lto = "thin"
opt-level = 3
debug = false
