[package]
name = "trace_event_kern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"

[profile.dev]
panic = "abort"

[inner_unikernel]
helpers = [
    "bpf_perf_prog_read_value",
    "bpf_get_smp_processor_id",
    "bpf_get_stackid_pe",
    "bpf_get_current_comm",
    "bpf_map_lookup_elem",
    "bpf_map_update_elem",
    "bpf_trace_printk",
    "bpf_get_current_pid_tgid"
]

headers = [
    "linux/bpf.h",
#    "linux/bpf_perf_event.h",
]
