[package]
name = "tracex5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"

#[dependencies.compiler_builtins]
#version = "0.1.66"
#git = "https://github.com/rust-lang/compiler-builtins"
#features = ["mem"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
