[package]
name = "memcached_benchmark"
version = "0.2.0"
edition = "2021"
authors = ["Ruowen Qin ruowenq2@illinois.edu"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memcache = "0.18"
rand = "0.8"
zipf = "7"
clap = { version = "4", features = ["derive"] }
rayon = "1"
tokio = { version = "1", features = ["full"] }
zstd = "0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
async-memcached = "0"
tokio-util = { version = "0.7", features = ["rt"] }
rand_chacha = "0"
log = "0"
env_logger = { version = "0" }


[profile.release]
lto = "thin"
opt-level = 3
debug = false
codegen-units = 1
panic = "abort"
strip = true
