[package]
name = "memcached_benchmark"
version = "0.2.0"
edition = "2024"
authors = ["Ruowen Qin ruowenq2@illinois.edu"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memcache = { version = "0.18", default-features = false }
rand = "0"
rand_distr = "0"
clap = { version = "4", features = ["derive"] }
rayon = "1"
tokio = { version = "1", features = ["full"] }
zstd = { version = "0", features = ["zstdmt", "thin-lto"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
async-memcached = "0"
tokio-util = { version = "0.7", features = ["rt"] }
rand_chacha = "0"
log = "0"
env_logger = { version = "0" }
mimalloc = "0"
anyhow = "1"


[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
test-log = "0"
duct = "0"

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
panic = "abort"
strip = true
